<resources>
    <string name="app_name">বিটেশ্বর যুব সমাজ</string>
    <string name="notice">নোটিশ</string>
    <string name="pepole">সদস্য</string>
    <string name="aboutUs">সদস্য সম্পর্কে বিস্তারিত..</string>
    <string name="title">বিটেশ্বর যুব সমাজ</string>
    <string name="title2">আমার নাম সোহাগ</string>
    <string name="slogan">ইসলামের পথে,\n অসহায় এর পাশে।</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="aboutBijus">রটা যায় রিয়া বলে রাফিন যেনো চিন্তা না করে বাসায় চলে যায়। রাফিন কি আর সেই কথা শুনে। এক ফাকে রিয়ার মা কোথায় যেনো যায় রিয়ার বান্ধবীকে রেখে সেই সুযোগেই রাফিন ঢুকে রিয়াকে যেখানে রাখা হয়। রাফিন এর চোখ ছিলো ভেজা মনে হচ্ছিলো অনেক কেঁদেছে সে। রিয়ার কাছে গিয়েই রাফিন কাদো কাদো গলায় বললো কিচ্ছু হবে না তোমার এই যে আমি চলে এসেছি আমি আমি আছি তোমার পাশে । রাফিন প্রায় আধ ঘন্টা ধরে রিয়ার হাত ধরে বসে ছিলো। প্রায় চার দিন রিয়া হাঁসপাতালে ছিলো রাফিন প্রতিদিন গিয়ে দূরে বসে থাকতো আর সুযোগ পেলেই কাছে যেতো।
</string>
    <string name="blood_donner">রক্তদাতা</string>
    <string name="enter_user_name">ইউজার নাম দিন</string>
    <string name="enter_pass">পাসওয়ার্ড দিন</string>
    <string name="dummy_text">dummy text for check</string>
    <string name="search">সার্চ</string>
    <string name="adaykari">আদায়কারীর নাম:</string>
    <string name="chada_details">আপনার সকল চাঁদার বিবরণ</string>
    <string name="tottho_change_koron">তথ্য পরিবর্তন করুন</string>
    <string name="notice_loading">নোটিশ লোড হচ্ছে...</string>


    <string translatable="true" name="about_title">আমাদের সংক্ষিপ্ত ইতিহাস</string>
    <string name="bismillah">বিসমিল্লাহির রহমানির রাহীম</string>

    <string name="our_history"><b>বিটেশ্বর</b> গ্রামটি কুমিল্লা জেলার, দাউদকান্দি উপজেলার, একটি অতি পরিচিত নাম। বিটেশ্বর ইউনিয়নের প্রাণ কেন্দ্র বিটেশ্বর গ্রামটি। বিটেশ্বর-তিনপাড়া নিয়ে বিটেশ্বর, ইউনিয়নের ৬নং ওয়ার্ড গঠিত , বিটেশ্বর গ্রামেই প্রায় ৮০০—৯০০ ভোটার রয়েছে যাদের অধিকাংশই মুসলিম, শিক্ষার হার দিয়ে এই গ্রামটি অনেক পিছিয়ে রয়েছে, যার প্রধান কারণ দারিদ্রতা ও অজ্ঞতা, বিটেশ্বর সহ অাশে পাশের অনেক গ্রামের মানুষই বিভিন্ন অজ্ঞতার মধ্যে নিমজ্জিত, প্রতিনিয়তই গান-বাজনা নিয়ে ব্যস্ত থাকাই ছিল তাদের প্রতিদিনের কাজ ৷ বিটেশ্বর গ্রামেই বিটেশ্বর বাজার নামে অতি পরিচিত একটি বাজার রয়েছে৷ সেখানেই ছিল গান-বাজনার অভায়ারন্য ৷ অামাদের গ্রামে ওয়াজ মাহফিলের প্রচলন ছিলনা বল্লেই চলে, যা অামরা জন্মের পর থেকেই দেখে অাসছি, কিন্তু তার পর ও অামরা গান-বাজনার বিরুদ্ধে ছিলাম ৷ অামরা চাচ্ছিলাম এলাকায়, তাফসীর মাহফিল করে এলাকার মানুষগুলোকে ইসলামের পথে নিয়ে অাসতে, <b>সেই লক্ষ্যে ২০১৬ ইং সালে বিটেশ্বর গ্রামের কয়েকজন যুবক সর্ব প্রথম একটি ওয়াজ মাহফিল অায়োজনের উদ্যোগ নেয়,</b> যাদের মধ্যে অন্যতম ছিল:\n\n
        মোঃ ইকবাল,\n মোঃ ইসমাইল(রুবেল),\n মোঃ রিপন,\n মোঃ ইব্রাহিম(১),\n মোঃ ইব্রাহিম(২),\n মোঃ কামরুল\nসহ অারো অনেকে।  \n\nঅামি মোঃ সাইফুল ইসলাম(জুয়েল)এর সাথে যোগাযোগ করে এলাকার বড় ভাই হিসেবে ৷ যেহেতু অামি তখন ঢাকাতে ছিলাম তাই ফোনে ফোনে ওদের দিক নির্দেশনা দেওয়ার চেষ্টা করতাম৷ যাই হোক যেহেতু অামাদের তখন প্রথম মাহফিল ছিল, অনেক কিছুই এলোমেলো ছিল, তারপরও অাল্লাহর অশেষ রহমতে, প্রথম বৎসরের মাহফিল সুন্দর ভাবেই সম্পন্ন হয়৷ তবে এখানে বলে রাখা দরকার তখনও কিন্তু বিটেশ্বর যুব সমাজ গঠিত হয় নাই, অার <b>সেই ২০১৬ ইং সালের মাহফিলটাই ছিল বিটেশ্বর বাজারের প্রথম মাহফিল ৷</b> এলাকার লোকজনের সার্বিক সহযোগিতায়, প্রথম বছরের মাহফিল সম্পন্ন হয় ৷ তবে প্রথম বছরের মাহফিলের পর, এলাকায় যুবকদের মধ্যে অাশার অালো দেখা দেয় ৷ অার <b>তখনই ১৭জন সদস্য নিয়ে, যাত্রা শুরু করে বিটেশ্বর যুব সমাজ।</b> সিদ্ধান্ত হয় প্রতি মাসে প্রত্যেক সদস্য,  ২০০ টাকা করে চাদা প্রদান করবে, যা মাহফিল এবং এলাকার অসহায় মানুষদের জন্য ব্যয় করা হবে ।
অার এভাবেই চলতে থাকে বিটেশ্বর যুব সমাজের কার্যক্রম । তারপর ২০১৭,২০১৮,২০১৯,ও ২০২০ সালে যথাক্রমে ২য়,৩য়,৪র্থ ও ৫ম বার্ষিক তাফসীরুল কোরঅান মাহফিল অায়োজন করে ৷ এবং বর্তমান সদস্য দাড়ায় ৫০ জন৷ এবং সিদ্ধান্ত নেওয়া হয় অার নতুন সদস্য যোগ করা হবেনা ৷ অাল্লাহ তায়ালার অশেষ রহমতে, ইসলামের পথে এগিয়ে চলছে  প্রিয়, বিটেশ্বর যুব সমাজ নামের সংগঠনটি ৷ প্রতি বছর গরীব অসহায়দের মাঝে ইফতার সামগ্রী বিতরন, চিকিৎসার জন্য অার্থিক অনুদান ও মসজিদ-মাদ্রাসায় সহযোগীতা করে অাসছে৷  অাল্লাহ তায়ালার রহমতে অামাদের বিভিন্ন মাহফিলে:\n\n
        ডঃ অাবুল কালাম অাজাদ (বাশার),\n সাদিকুর রহমান অাজহারী,\n ডঃশাইখুল ইসলাম( শাইখ),\n হাফেজ অাতাউর রহমান\n\n
        সহ অারো অনেক দেশ বরেন্য ওয়ায়েজীনে কেরাম অাগমন করেছেন৷ সেই সাথে প্রিয় সংগঠনটির কার্যক্রম সুন্দর ভাবে পরিচালনা করার জন্য যাদের অবদান শ্রদ্ধার সাথে স্বরণ করি৷ তাদের মধ্যে অন্যতমঃ \n\n\n<b> জনাব অানিছুর রহমান(ইকতিয়ার)মেম্বার,\n হাজী মোঃ বেলাল হোসেন চৌধুরী,\n মোঃ অাঃ মতিন বেপারী,\n মোঃ সালাম খন্দকার,\n ডাঃ অাবুল কালাম সরদার,\n মোঃ হাশেম বেপারী,\n মোঃঅালী অাশ্রাফ,\n মোঃ মহসিন গোলজার,\n মোঃ ইকবাল মল্লিক</b>\nসহ অারো অনেকে।\n\n
        সেই সাথে যুব সমাজের সম্মানিত সদস্যদের মধ্যে যাদের অবদান সব চেয়ে বেশি তারা হলোঃ \n\n<b> মোঃ সাইফুল ইসলাম(জুয়েল),\n মোঃ মহিউদ্দিন,\n মোঃ হুমায়ন কবির,\n মোঃঅালী,\n মোঃ শামীম,\n মোঃ অাল-অামিন(১),\n মোঃ বাবুল,\n মোঃ মামুন,\n মোঃ মিজান ,\n</b>সহ স্নেহের ছোট ভাইদের মধ্যে ,\n<b> মোঃ ইকবাল ,\n মোঃ ঈসমাইল(রুবেল),\n হাফেজ মোঃ আঃ রহমান(সাদ্দাম),\n মোঃ রুবেল (রাজা),\n মোঃ অাল-অামিন(হৃদয়),\n মোঃ অাল-অামিন(২),\n মোঃ ওবাইদুল,\n মোঃ বিল্লাল,\n মোঃ সাদ্দাম,\n মোঃ ফারুক,\n মোঃ সজিব ।</b>\n\n
       <u>প্রবাসীদের মধ্যেঃ</u>  \n\nমোঃ রাসেল,\nমোঃ ফারুক,\nমোঃ রুবেল,\nমোঃ ঈমান ,\nমোঃ জহির\nসহ আরো অনেকে।\n\n
        সেই সাথে আলাদা ভাবে বলতে হবে যুব সমাজের সদস্য স্নেহের ছোট ভাই ইন্জিনিয়ার মোঃ সোহাগের কথা যিনি ইন্টারনেট ভিত্তিক সকল সাপোর্ট দিয়ে  আসছে, সংগঠনটির শুরু থেকে তার প্রচেষ্ঠায় তৈরি হয়েছে বিটেশ্বর যুব সমাজ নামে ফেইসবুক পেজ,গ্রুপ ও সফটওয়্যার ইত্যাদি।\n
পরিশেষে দোয়া চাই, সকলের কাছে প্রিয় সংগঠনটি যুগ যুগ ধরে যেন ইসলামের পথে থেকে গরীব অসহায় মানুষের পাশে দাড়াতে পারি। <b>তাই তো বিটেশ্বর যুব সমাজের স্লোগান হচ্ছে,</b>\n\n
        <b>\" ইসলামের পথে, অসহায় এর পাশে \"</b>\n\n
        <u>ইতিহাস লিখনিতে,</u>\n\n
        <b> মোঃ সাইফুল ইসলাম (জুয়েল)</b>\n
        - সেক্রেটারী,বিটেশ্বর যুব সমাজ\n\n
        সহযোগিতায়ঃ\n
        <b>মোঃ ইকবাল,\n মোঃ মহিউদ্দিন,\n মোঃ হুমায়ুন কবির,\n মোঃ আল আমিন (হৃদয়)</b></string>

</resources>

