<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarID"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorToolbar"
        app:title="@string/title">


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/p1ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp">


        <androidx.cardview.widget.CardView
            android:onClick="about"
            android:id="@+id/logoCardViewID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/colorCard3"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/mainLogoID"
                    android:layout_width="140dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/MainTextID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/mainLogoID"
                    android:paddingTop="28sp"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/MainTextID"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@+id/mainLogoID"
                    android:text="@string/slogan"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:theme="@style/Animation.AppCompat.DropDownUp" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/p2ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:weightSum="2">


        <androidx.cardview.widget.CardView
            android:onClick="bloodDonner"
            android:id="@+id/noticeID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:cardElevation="5dp"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorCard"
            app:cardCornerRadius="8dp"
            tools:ignore="NestedWeights">

            <RelativeLayout
                android:id="@+id/noticeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/middelLogo1ID"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="15dp"
                    android:src="@drawable/blood_ic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/middelLogo1ID"
                    android:layout_marginStart="18dp"
                    android:text="@string/blood_donner"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:onClick="people"
            android:id="@+id/pepoleID"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:cardElevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorCard2"

            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:id="@+id/people_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/middelLogo2ID"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="15dp"
                    android:src="@drawable/pepole_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/middelLogo2ID"
                    android:layout_marginStart="28dp"
                    android:text="@string/pepole"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>


    <RelativeLayout
        android:id="@+id/p3ID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <androidx.cardview.widget.CardView
            android:onClick="user"
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:foreground="?android:selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/colorCard4"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/about_icon" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutUs"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorGray"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</LinearLayout>